--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lenis": "^1.3.11",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
+    "next-intl": "^4.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
