--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "emailjs": "^4.0.3",
     "framer-motion": "^12.23.24",
-    "lenis": "^1.3.13",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "next-intl": "^4.4.0",
@@ -41,6 +41,7 @@
     "eslint-config-next": "15.5.5",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "shadcn": "^3.5.0",
     "typescript": "^5.9.3"
   }
 }
